# RayTracing

./: .gitignore  CMakeLists.txt  README.md  version.cmake
.github/workflows/: cmake-multi-platform.yml
include/: Arguments.hpp  Camera.hpp  Color.hpp  Hittable.hpp  HittableList.hpp  Material.hpp  Point3.hpp  Ray.hpp  Renderer.hpp  Sphere.hpp  Vec3.hpp  Version.hpp.in  utils.hpp
src/: Arguments.cpp  Camera.cpp  Color.cpp  HittableList.cpp  Material.cpp  Renderer.cpp  Sphere.cpp  main.cpp  utils.cpp  vec3.cpp
